--- a/gpt_learning.ipynb
+++ b/gpt_learning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "57fba35e-d730-447d-a7fa-cc6e7522a693",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "30199d4a-6ee9-48a0-9819-25aed9079be0",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "8f58f877-3c70-4d49-be9f-c3d9dd800b79",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "\"A green plastic watering can\\nFor a fake Chinese rubber plant\\nIn a fake plastic earth\\nThat she bought from a rubber man\\nIn a town full of rubber plants\\nTo get rid of itself\\n\\nIt wears her out\\nIt wears her out\\nIt wears her out\\nIt wears her out\\n\\nShe lives with a broken man\\nA cracked polystyrene man\\nWho just crumbles and burns\\nHe used to do surgery\\nFor girls in the eighties\\nBut gravity always wins\\n\\nAnd it wears him out\\nIt wears him out\\nIt wears him out\\nIt wears\\nYou might also like\\nShe looks like the real thing\\nShe tastes like the real thing\\nMy fake plastic love\\nBut I can't help the feeling\\nI could blow through the ceiling\\nIf I just turn and run\\n\\nAnd it wears me out\\nIt wears me out\\nIt wears me out\\nIt wears me out\\n\\nAnd if I could be who you wanted\\nIf I could be who you wanted\\nAll the time\\nAll the time\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "22ef1f30-dad2-43f7-8020-62fb689a40ae",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "0ce77e60-5206-4bf5-ad03-04abaa0e5d88",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "796d7f2c-2b8e-46c4-b6f6-57ec882381b0",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "5fa76945-bffb-4129-b10f-4bd15e7b522a",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        " 'y': 36}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "2af7482a-2f90-458a-ae91-665f094097cd",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "b75e9125-7e19-42ae-9df0-fac6a1cc3dae",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "\"A green plastic watering can\\nFor a fake Chinese rubber plant\\nIn a fake plastic earth\\nThat she bought from a rubber man\\nIn a town full of rubber plants\\nTo get rid of itself\\n\\nIt wears her out\\nIt wears her out\\nIt wears her out\\nIt wears her out\\n\\nShe lives with a broken man\\nA cracked polystyrene man\\nWho just crumbles and burns\\nHe used to do surgery\\nFor girls in the eighties\\nBut gravity always wins\\n\\nAnd it wears him out\\nIt wears him out\\nIt wears him out\\nIt wears\\nYou might also like\\nShe looks like the real thing\\nShe tastes like the real thing\\nMy fake plastic love\\nBut I can't help the feeling\\nI could blow through the ceiling\\nIf I just turn and run\\n\\nAnd it wears me out\\nIt wears me out\\nIt wears me out\\nIt wears me out\\n\\nAnd if I could be who you wanted\\nIf I could be who you wanted\\nAll the time\\nAll the time\""
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "590fa106-8d6e-4975-9a27-bf38df414ef7",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "tensor([ 3,  1, 20, 30, 18, 18, 27,  1, 29])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "2815a945-872c-4e97-bd43-2f5373deaf4c",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "id": "6ff952ea-37ea-4901-8877-0c22e128badc",
    "metadata": {},
    "outputs": [
@@ -347,17 +347,17 @@
       "torch.Size([4, 8])\n",
       "\n",
       "yb:\n",
-      " tensor([[33, 27,  0,  0,  3, 27, 17,  1],\n",
-      "        [19,  1, 30, 33, 15, 15, 18, 30],\n",
-      "        [ 1, 32, 21, 18,  1, 30, 18, 14],\n",
-      "        [16,  1, 35, 14, 32, 18, 30, 22]])\n"
+      " tensor([[33, 20, 21, 32,  1, 19, 30, 28],\n",
+      "        [18,  1,  5, 21, 22, 27, 18, 31],\n",
+      "        [ 1, 26, 18,  1, 28, 33, 32,  0],\n",
+      "        [31,  1, 21, 18, 30,  1, 28, 33]])\n"
      ]
     }
    ],
    "source": [
-    "# torch.manual_seed(1337)  # doesn't have to be set since I'm using a different dataset\n",
+    "torch.manual_seed(1337)  # won't match video's since I'm using a different dataset\n",
     "block_size = 8   # the maximum context length for predictions\n",
-    "batch_size = 4   # how many indpeendnet sequences will we process in parallel\n",
+    "batch_size = 4   # how many independent sequences will we process in parallel\n",
     "\n",
     "\n",
     "# data loading\n",
@@ -383,20 +383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "id": "155905df-c7e6-473e-86da-7c3c796097dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[30, 33, 27,  0,  0,  3, 27, 17],\n",
-       "        [28, 19,  1, 30, 33, 15, 15, 18],\n",
-       "        [18,  1, 32, 21, 18,  1, 30, 18],\n",
-       "        [22, 16,  1, 35, 14, 32, 18, 30]])"
+       "tensor([[28, 33, 20, 21, 32,  1, 19, 30],\n",
+       "        [24, 18,  1,  5, 21, 22, 27, 18],\n",
+       "        [31,  1, 26, 18,  1, 28, 33, 32],\n",
+       "        [30, 31,  1, 21, 18, 30,  1, 28]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "id": "b58d04bb-5da3-4141-9c77-cd10f2351411",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'a fake C'"
+       "'ught fro'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "id": "961c7822-4740-4b8a-bfd8-c80153666c9e",
    "metadata": {},
    "outputs": [
@@ -439,38 +439,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "when input is [30], the target is: 33\n",
-      "when input is [30, 33], the target is: 27\n",
-      "when input is [30, 33, 27], the target is: 0\n",
-      "when input is [30, 33, 27, 0], the target is: 0\n",
-      "when input is [30, 33, 27, 0, 0], the target is: 3\n",
-      "when input is [30, 33, 27, 0, 0, 3], the target is: 27\n",
-      "when input is [30, 33, 27, 0, 0, 3, 27], the target is: 17\n",
-      "when input is [30, 33, 27, 0, 0, 3, 27, 17], the target is: 1\n",
-      "when input is [28], the target is: 19\n",
-      "when input is [28, 19], the target is: 1\n",
-      "when input is [28, 19, 1], the target is: 30\n",
-      "when input is [28, 19, 1, 30], the target is: 33\n",
-      "when input is [28, 19, 1, 30, 33], the target is: 15\n",
-      "when input is [28, 19, 1, 30, 33, 15], the target is: 15\n",
-      "when input is [28, 19, 1, 30, 33, 15, 15], the target is: 18\n",
-      "when input is [28, 19, 1, 30, 33, 15, 15, 18], the target is: 30\n",
-      "when input is [18], the target is: 1\n",
-      "when input is [18, 1], the target is: 32\n",
-      "when input is [18, 1, 32], the target is: 21\n",
-      "when input is [18, 1, 32, 21], the target is: 18\n",
-      "when input is [18, 1, 32, 21, 18], the target is: 1\n",
-      "when input is [18, 1, 32, 21, 18, 1], the target is: 30\n",
-      "when input is [18, 1, 32, 21, 18, 1, 30], the target is: 18\n",
-      "when input is [18, 1, 32, 21, 18, 1, 30, 18], the target is: 14\n",
-      "when input is [22], the target is: 16\n",
-      "when input is [22, 16], the target is: 1\n",
-      "when input is [22, 16, 1], the target is: 35\n",
-      "when input is [22, 16, 1, 35], the target is: 14\n",
-      "when input is [22, 16, 1, 35, 14], the target is: 32\n",
-      "when input is [22, 16, 1, 35, 14, 32], the target is: 18\n",
-      "when input is [22, 16, 1, 35, 14, 32, 18], the target is: 30\n",
-      "when input is [22, 16, 1, 35, 14, 32, 18, 30], the target is: 22\n"
+      "when input is [28], the target is: 33\n",
+      "when input is [28, 33], the target is: 20\n",
+      "when input is [28, 33, 20], the target is: 21\n",
+      "when input is [28, 33, 20, 21], the target is: 32\n",
+      "when input is [28, 33, 20, 21, 32], the target is: 1\n",
+      "when input is [28, 33, 20, 21, 32, 1], the target is: 19\n",
+      "when input is [28, 33, 20, 21, 32, 1, 19], the target is: 30\n",
+      "when input is [28, 33, 20, 21, 32, 1, 19, 30], the target is: 28\n",
+      "when input is [24], the target is: 18\n",
+      "when input is [24, 18], the target is: 1\n",
+      "when input is [24, 18, 1], the target is: 5\n",
+      "when input is [24, 18, 1, 5], the target is: 21\n",
+      "when input is [24, 18, 1, 5, 21], the target is: 22\n",
+      "when input is [24, 18, 1, 5, 21, 22], the target is: 27\n",
+      "when input is [24, 18, 1, 5, 21, 22, 27], the target is: 18\n",
+      "when input is [24, 18, 1, 5, 21, 22, 27, 18], the target is: 31\n",
+      "when input is [31], the target is: 1\n",
+      "when input is [31, 1], the target is: 26\n",
+      "when input is [31, 1, 26], the target is: 18\n",
+      "when input is [31, 1, 26, 18], the target is: 1\n",
+      "when input is [31, 1, 26, 18, 1], the target is: 28\n",
+      "when input is [31, 1, 26, 18, 1, 28], the target is: 33\n",
+      "when input is [31, 1, 26, 18, 1, 28, 33], the target is: 32\n",
+      "when input is [31, 1, 26, 18, 1, 28, 33, 32], the target is: 0\n",
+      "when input is [30], the target is: 31\n",
+      "when input is [30, 31], the target is: 1\n",
+      "when input is [30, 31, 1], the target is: 21\n",
+      "when input is [30, 31, 1, 21], the target is: 18\n",
+      "when input is [30, 31, 1, 21, 18], the target is: 30\n",
+      "when input is [30, 31, 1, 21, 18, 30], the target is: 1\n",
+      "when input is [30, 31, 1, 21, 18, 30, 1], the target is: 28\n",
+      "when input is [30, 31, 1, 21, 18, 30, 1, 28], the target is: 33\n"
      ]
     }
    ],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "id": "380dee74-3afa-42a0-aff3-d84921518399",
    "metadata": {},
    "outputs": [
@@ -492,10 +492,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[30, 33, 27,  0,  0,  3, 27, 17],\n",
-      "        [28, 19,  1, 30, 33, 15, 15, 18],\n",
-      "        [18,  1, 32, 21, 18,  1, 30, 18],\n",
-      "        [22, 16,  1, 35, 14, 32, 18, 30]])\n"
+      "tensor([[28, 33, 20, 21, 32,  1, 19, 30],\n",
+      "        [24, 18,  1,  5, 21, 22, 27, 18],\n",
+      "        [31,  1, 26, 18,  1, 28, 33, 32],\n",
+      "        [30, 31,  1, 21, 18, 30,  1, 28]])\n"
      ]
     }
    ],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "id": "8b484879-3d0d-4329-8d00-45a11d8b778a",
    "metadata": {},
    "outputs": [],
@@ -538,22 +538,44 @@
     "        # targets is y;\n",
     "\n",
     "        # idx and targets are both (B,T) tensor of integers\n",
+    "        # logits are the predictions\n",
     "        logits = self.token_embedding_table(idx) # (B,T,C)  # what is channel? the character size\n",
     "\n",
-    "        # if targets is None:\n",
-    "        #     loss = None\n",
-    "        # else:\n",
-    "        #     B, T, C = logits.shape\n",
-    "        #     logits = logits.view(B*T, C)\n",
-    "        #     targets = targets.view(B*T)\n",
-    "        #     loss = F.cross_entropy(logits, targets)\n",
+    "        # use this conditional to evaluate the loss (quality of predictions)\n",
+    "        # if it is possible\n",
+    "        # likelihood maximization = minimization of neg log likelihood = minimization of the cross-entropy\n",
+    "        # https://discuss.pytorch.org/t/difference-between-cross-entropy-loss-or-log-likelihood-loss/38816/2\n",
+    "        if targets is None:  # this is needed for the `generate` function below where loss isn't used\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            # need to change order of dimensions so it can be read by `cross_entropy`\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)  # a 2D view\n",
+    "            targets = targets.view(B*T)  # this will be 1D\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
     "\n",
-    "        return logits #, loss"
+    "        return logits, loss\n",
+    "\n",
+    "    # generate text, by just adding one more for every batch dimension in the time dimension\n",
+    "    def generate(self, idx, max_new_tokens):\n",
+    "        # idx is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self(idx)  # loss is being ignored here\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "            # sample from the multinomial probability distribution\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "            # append sampled index to the running sequence... whatever is predicted is concatenated\n",
+    "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+    "        return idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 61,
    "id": "80fb0edb-9359-464e-8f5e-9170141a4e75",
    "metadata": {},
    "outputs": [
@@ -563,7 +585,7 @@
        "Embedding(37, 37)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 62,
    "id": "d000b99a-0118-4379-9c64-aa898aeca328",
    "metadata": {},
    "outputs": [
@@ -603,22 +625,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 63,
    "id": "ed25006b-77e2-44d1-b098-e24c5d9193b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.6623,  0.8722,  1.3651, -2.1476, -0.6186, -0.5053, -0.2350,  0.6521,\n",
-       "         -0.1578,  0.8716, -0.4880,  0.2086,  0.2814,  0.5410,  1.4919,  1.2776,\n",
-       "          1.3369, -0.1373, -1.2324, -0.1879, -1.1507,  0.0452, -0.7694,  1.1635,\n",
-       "          1.9181,  1.1395,  1.2390, -0.1132,  0.2772,  0.6346, -0.5812, -1.2004,\n",
-       "         -0.7078,  0.7996,  0.7359,  0.0276, -1.4055]],\n",
+       "tensor([[-0.9883,  0.5120,  0.8213, -0.4068,  1.1888, -1.4860,  0.8820,  0.1223,\n",
+       "          0.4179, -0.6261, -0.7949,  0.8804, -0.6083,  0.4067,  0.1444,  0.7383,\n",
+       "          0.2105,  0.7643,  0.6467,  0.6577,  0.3708, -0.4748,  0.5696,  0.8532,\n",
+       "          2.7071,  0.7921, -0.3820, -0.5626,  1.5889,  0.7005, -0.6309, -0.5384,\n",
+       "          2.2132, -0.6222, -0.6999, -0.2165,  2.0037]],\n",
        "       grad_fn=<EmbeddingBackward0>)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,27 +651,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 64,
    "id": "4d7c469e-a368-4339-aa6f-ca1a1cb93e58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# out = m(xb, yb)\n",
+    "# print(out.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "0f65fff3-dbfe-4648-b508-c36aaee508fe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 8, 37])\n"
+      "torch.Size([32, 37])\n",
+      "tensor(4.1957, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "out = m(xb, yb)\n",
-    "print(out.shape)"
+    "logits, loss = m(xb, yb)\n",
+    "print(logits.shape)\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2226a53c-237e-4003-97c9-85759e640066",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "u\n",
+      "aYkgBnnA\n",
+      "woMAlgevAWlHbyfvA aojhy\n",
+      "CBaA mvdpSIClBsSts'HiWMTuBevBhncl'HiCyMAkbl'iWjMyWcoHpwBIdgkWMkcv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test generation\n",
+    "# idx is being set to a 1x1 tensor of 0\n",
+    "print(decode(m.generate(idx = torch.zeros((1,1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f77bd242-1734-42f6-a5ce-f601922f74c8",
+   "metadata": {},
+   "source": [
+    "This is garbage because the model isn't trained.\n",
+    "\n",
+    "Also, the bigram model isn't using any history, other than the last character."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f65fff3-dbfe-4648-b508-c36aaee508fe",
+   "id": "69b1f17f-3345-42aa-9776-068810075d31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -657,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2226a53c-237e-4003-97c9-85759e640066",
+   "id": "e419c456-eb3f-457b-89c5-83e4a092f656",
    "metadata": {},
    "outputs": [],
    "source": []
