feat: add deeplearning.ai course code

--- a/gpt_learning.ipynb
+++ b/gpt_learning.ipynb
@@ -344,15 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "590fa106-8d6e-4975-9a27-bf38df414ef7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-11T23:10:22.735292Z",
-     "iopub.status.busy": "2025-02-11T23:10:22.731964Z",
-     "iopub.status.idle": "2025-02-11T23:10:22.815445Z",
-     "shell.execute_reply": "2025-02-11T23:10:22.814946Z",
-     "shell.execute_reply.started": "2025-02-11T23:10:22.735241Z"
+     "iopub.execute_input": "2025-02-11T23:12:30.316795Z",
+     "iopub.status.busy": "2025-02-11T23:12:30.315381Z",
+     "iopub.status.idle": "2025-02-11T23:12:30.327519Z",
+     "shell.execute_reply": "2025-02-11T23:12:30.326437Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:30.316705Z"
     }
    },
    "outputs": [
@@ -362,7 +362,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,15 +390,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "2815a945-872c-4e97-bd43-2f5373deaf4c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-11T23:10:25.109742Z",
-     "iopub.status.busy": "2025-02-11T23:10:25.108984Z",
-     "iopub.status.idle": "2025-02-11T23:10:25.127068Z",
-     "shell.execute_reply": "2025-02-11T23:10:25.126113Z",
-     "shell.execute_reply.started": "2025-02-11T23:10:25.109688Z"
+     "iopub.execute_input": "2025-02-11T23:12:31.796256Z",
+     "iopub.status.busy": "2025-02-11T23:12:31.795660Z",
+     "iopub.status.idle": "2025-02-11T23:12:31.806180Z",
+     "shell.execute_reply": "2025-02-11T23:12:31.805445Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:31.796215Z"
     }
    },
    "outputs": [
@@ -438,15 +438,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "6ff952ea-37ea-4901-8877-0c22e128badc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-11T23:11:28.881490Z",
-     "iopub.status.busy": "2025-02-11T23:11:28.880829Z",
-     "iopub.status.idle": "2025-02-11T23:11:28.897707Z",
-     "shell.execute_reply": "2025-02-11T23:11:28.897018Z",
-     "shell.execute_reply.started": "2025-02-11T23:11:28.881447Z"
+     "iopub.execute_input": "2025-02-11T23:12:33.187663Z",
+     "iopub.status.busy": "2025-02-11T23:12:33.186712Z",
+     "iopub.status.idle": "2025-02-11T23:12:33.202989Z",
+     "shell.execute_reply": "2025-02-11T23:12:33.202276Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:33.187585Z"
     }
    },
    "outputs": [
@@ -497,15 +497,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "155905df-c7e6-473e-86da-7c3c796097dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-11T23:11:29.356915Z",
-     "iopub.status.busy": "2025-02-11T23:11:29.355911Z",
-     "iopub.status.idle": "2025-02-11T23:11:29.366768Z",
-     "shell.execute_reply": "2025-02-11T23:11:29.365941Z",
-     "shell.execute_reply.started": "2025-02-11T23:11:29.356839Z"
+     "iopub.execute_input": "2025-02-11T23:12:34.391817Z",
+     "iopub.status.busy": "2025-02-11T23:12:34.390633Z",
+     "iopub.status.idle": "2025-02-11T23:12:34.399791Z",
+     "shell.execute_reply": "2025-02-11T23:12:34.398931Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:34.391712Z"
     }
    },
    "outputs": [
@@ -518,7 +518,7 @@
        "        [25, 17, 27, 10,  0, 21,  1, 54]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,15 +529,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "b58d04bb-5da3-4141-9c77-cd10f2351411",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-11T23:11:41.728358Z",
-     "iopub.status.busy": "2025-02-11T23:11:41.727659Z",
-     "iopub.status.idle": "2025-02-11T23:11:41.737265Z",
-     "shell.execute_reply": "2025-02-11T23:11:41.736360Z",
-     "shell.execute_reply.started": "2025-02-11T23:11:41.728314Z"
+     "iopub.execute_input": "2025-02-11T23:12:34.546886Z",
+     "iopub.status.busy": "2025-02-11T23:12:34.546035Z",
+     "iopub.status.idle": "2025-02-11T23:12:34.555574Z",
+     "shell.execute_reply": "2025-02-11T23:12:34.554445Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:34.546817Z"
     }
    },
    "outputs": [
@@ -547,7 +547,7 @@
        "\"et's hea\""
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,15 +561,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "961c7822-4740-4b8a-bfd8-c80153666c9e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-11T23:11:35.491315Z",
-     "iopub.status.busy": "2025-02-11T23:11:35.490313Z",
-     "iopub.status.idle": "2025-02-11T23:11:35.503849Z",
-     "shell.execute_reply": "2025-02-11T23:11:35.503170Z",
-     "shell.execute_reply.started": "2025-02-11T23:11:35.491241Z"
+     "iopub.execute_input": "2025-02-11T23:12:35.719175Z",
+     "iopub.status.busy": "2025-02-11T23:12:35.718497Z",
+     "iopub.status.idle": "2025-02-11T23:12:35.730293Z",
+     "shell.execute_reply": "2025-02-11T23:12:35.729412Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:35.719108Z"
     }
    },
    "outputs": [
@@ -622,18 +622,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "380dee74-3afa-42a0-aff3-d84921518399",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:12:36.941002Z",
+     "iopub.status.busy": "2025-02-11T23:12:36.940299Z",
+     "iopub.status.idle": "2025-02-11T23:12:36.947835Z",
+     "shell.execute_reply": "2025-02-11T23:12:36.946447Z",
+     "shell.execute_reply.started": "2025-02-11T23:12:36.940962Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[28, 33, 20, 21, 32,  1, 19, 30],\n",
-      "        [24, 18,  1,  5, 21, 22, 27, 18],\n",
-      "        [31,  1, 26, 18,  1, 28, 33, 32],\n",
-      "        [30, 31,  1, 21, 18, 30,  1, 28]])\n"
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n"
      ]
     }
    ],
@@ -653,9 +661,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "id": "8b484879-3d0d-4329-8d00-45a11d8b778a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:09.573627Z",
+     "iopub.status.busy": "2025-02-11T23:14:09.572513Z",
+     "iopub.status.idle": "2025-02-11T23:14:09.586789Z",
+     "shell.execute_reply": "2025-02-11T23:14:09.585938Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:09.573555Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# super simple bigram model\n",
@@ -670,7 +686,6 @@
     "        # for example token 30 (tensor above) will grab the 30th row of this\n",
     "        # embedding table, see output below\n",
     "        \n",
-    "\n",
     "    def forward(self, idx, targets=None):\n",
     "        # idx is x; inputs renamed to idx (not sure why it's renamed)\n",
     "        # targets is y;\n",
@@ -713,17 +728,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "id": "80fb0edb-9359-464e-8f5e-9170141a4e75",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:21.609832Z",
+     "iopub.status.busy": "2025-02-11T23:14:21.608834Z",
+     "iopub.status.idle": "2025-02-11T23:14:21.631881Z",
+     "shell.execute_reply": "2025-02-11T23:14:21.631076Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:21.609752Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Embedding(37, 37)"
+       "Embedding(65, 65)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,15 +762,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "id": "d000b99a-0118-4379-9c64-aa898aeca328",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:27.203734Z",
+     "iopub.status.busy": "2025-02-11T23:14:27.203083Z",
+     "iopub.status.idle": "2025-02-11T23:14:27.226193Z",
+     "shell.execute_reply": "2025-02-11T23:14:27.225308Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:27.203692Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 37])\n"
+      "torch.Size([1, 65])\n"
      ]
     }
    ],
@@ -763,22 +794,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "ed25006b-77e2-44d1-b098-e24c5d9193b2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:30.889231Z",
+     "iopub.status.busy": "2025-02-11T23:14:30.888580Z",
+     "iopub.status.idle": "2025-02-11T23:14:30.941743Z",
+     "shell.execute_reply": "2025-02-11T23:14:30.941174Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:30.889192Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.9883,  0.5120,  0.8213, -0.4068,  1.1888, -1.4860,  0.8820,  0.1223,\n",
-       "          0.4179, -0.6261, -0.7949,  0.8804, -0.6083,  0.4067,  0.1444,  0.7383,\n",
-       "          0.2105,  0.7643,  0.6467,  0.6577,  0.3708, -0.4748,  0.5696,  0.8532,\n",
-       "          2.7071,  0.7921, -0.3820, -0.5626,  1.5889,  0.7005, -0.6309, -0.5384,\n",
-       "          2.2132, -0.6222, -0.6999, -0.2165,  2.0037]],\n",
-       "       grad_fn=<EmbeddingBackward0>)"
+       "tensor([[ 0.5432,  0.9899, -0.2557, -1.1456, -0.0650, -0.8981,  0.6004, -0.0039,\n",
+       "          0.9268, -0.0855, -1.8009,  0.7865, -1.8513, -0.2894, -0.6531,  0.9476,\n",
+       "         -0.4904,  1.6570,  1.2089, -0.7427,  0.1015, -0.7365, -0.6101, -1.1973,\n",
+       "         -1.1110,  1.2195, -1.0201,  2.0264,  0.7080, -0.0137,  1.8259,  1.5226,\n",
+       "          0.6569, -1.2841, -0.7221, -0.9141, -0.8221, -1.6358, -1.3221, -1.2953,\n",
+       "         -0.6008, -1.1628, -0.2697,  0.1637,  2.1167,  0.1598,  0.2938, -0.7448,\n",
+       "          1.2736,  0.6247,  0.8426,  0.6110,  0.6414, -1.5403, -0.0429, -1.9318,\n",
+       "         -0.8507, -0.7448, -1.3679,  1.4416, -1.8638, -1.0699,  0.1224, -0.0139,\n",
+       "         -0.4864]], grad_fn=<EmbeddingBackward0>)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,9 +831,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "id": "4d7c469e-a368-4339-aa6f-ca1a1cb93e58",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:35.280770Z",
+     "iopub.status.busy": "2025-02-11T23:14:35.280078Z",
+     "iopub.status.idle": "2025-02-11T23:14:35.285255Z",
+     "shell.execute_reply": "2025-02-11T23:14:35.284157Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:35.280726Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# out = m(xb, yb)\n",
@@ -800,16 +850,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 47,
    "id": "0f65fff3-dbfe-4648-b508-c36aaee508fe",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:37.000698Z",
+     "iopub.status.busy": "2025-02-11T23:14:37.000016Z",
+     "iopub.status.idle": "2025-02-11T23:14:37.027777Z",
+     "shell.execute_reply": "2025-02-11T23:14:37.026728Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:37.000651Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([32, 37])\n",
-      "tensor(4.1957, grad_fn=<NllLossBackward0>)\n"
+      "torch.Size([32, 65])\n",
+      "tensor(5.0364, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -821,19 +879,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 48,
    "id": "2226a53c-237e-4003-97c9-85759e640066",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-11T23:14:40.639889Z",
+     "iopub.status.busy": "2025-02-11T23:14:40.639204Z",
+     "iopub.status.idle": "2025-02-11T23:14:40.688365Z",
+     "shell.execute_reply": "2025-02-11T23:14:40.687837Z",
+     "shell.execute_reply.started": "2025-02-11T23:14:40.639846Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "u\n",
-      "aYkgBnnA\n",
-      "woMAlgevAWlHbyfvA aojhy\n",
-      "CBaA mvdpSIClBsSts'HiWMTuBevBhncl'HiCyMAkbl'iWjMyWcoHpwBIdgkWMkcv\n"
+      "l-QYjt'CL?jLDuQcLzy'RIo;'KdhpV\n",
+      "vLixa,nswYZwLEPS'ptIZqOZJ$CA$zy-QTkeMk x.gQSFCLg!iW3fO!3DGXAqTsq3pdgq\n"
      ]
     }
    ],
