--- a/deeplearning_ai.ipynb
+++ b/deeplearning_ai.ipynb
@@ -48,15 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "7406843b-7e21-47f0-902b-d5b20fcb6d48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-15T08:18:01.825244Z",
-     "iopub.status.busy": "2025-02-15T08:18:01.823402Z",
-     "iopub.status.idle": "2025-02-15T08:18:01.841483Z",
-     "shell.execute_reply": "2025-02-15T08:18:01.840127Z",
-     "shell.execute_reply.started": "2025-02-15T08:18:01.825185Z"
+     "iopub.execute_input": "2025-02-16T06:49:27.106093Z",
+     "iopub.status.busy": "2025-02-16T06:49:27.105121Z",
+     "iopub.status.idle": "2025-02-16T06:49:27.118881Z",
+     "shell.execute_reply": "2025-02-16T06:49:27.118153Z",
+     "shell.execute_reply.started": "2025-02-16T06:49:27.106055Z"
     }
    },
    "outputs": [],
@@ -99,7 +99,8 @@
     "        self.row_dim = row_dim\n",
     "        self.col_dim = col_dim\n",
     "\n",
-    "    def forward(self, token_encodings):\n",
+    "\n",
+    "    def forward(self, token_encodings, return_scaled_sims=False):\n",
     "        \"\"\"Calculate self-attention values for each token\n",
     "\n",
     "        Attention(Q,K,V) = softmax( QK^T / sqrt(d_k)) * V\n",
@@ -115,8 +116,13 @@
     "        v = self.W_v(token_encodings)\n",
     "\n",
     "        # torch.matmul = matrix multiply \n",
+    "        # get similarities/dot products\n",
     "        unscaled_sims = torch.matmul(q, k.transpose(dim0=self.row_dim, dim1=self.col_dim))\n",
     "        scaled_sims = unscaled_sims / torch.tensor(k.size(self.col_dim)**0.5)\n",
+    "\n",
+    "        # to help visualize attention pattern\n",
+    "        if return_scaled_sims:\n",
+    "            return scaled_sims\n",
     "\n",
     "        # calculate attention\n",
     "        attention_percents = F.softmax(scaled_sims, dim=self.col_dim)\n",
@@ -130,15 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "f87b8441-d47b-46c2-a76f-9072b3c336fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-15T08:20:54.678125Z",
-     "iopub.status.busy": "2025-02-15T08:20:54.676221Z",
-     "iopub.status.idle": "2025-02-15T08:20:54.710140Z",
-     "shell.execute_reply": "2025-02-15T08:20:54.709511Z",
-     "shell.execute_reply.started": "2025-02-15T08:20:54.678052Z"
+     "iopub.execute_input": "2025-02-16T06:49:28.718210Z",
+     "iopub.status.busy": "2025-02-16T06:49:28.717570Z",
+     "iopub.status.idle": "2025-02-16T06:49:28.731508Z",
+     "shell.execute_reply": "2025-02-16T06:49:28.730689Z",
+     "shell.execute_reply.started": "2025-02-16T06:49:28.718175Z"
     }
    },
    "outputs": [
@@ -150,7 +156,7 @@
        "        [3.4989, 2.2427]], grad_fn=<MmBackward0>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,6 +175,45 @@
     "# giving us attention scores (self-attention values)\n",
     "selfAttention(encodings_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "51874f73-abc0-43ba-b4b7-d2de74bf2898",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T06:49:37.069632Z",
+     "iopub.status.busy": "2025-02-16T06:49:37.068669Z",
+     "iopub.status.idle": "2025-02-16T06:49:37.082819Z",
+     "shell.execute_reply": "2025-02-16T06:49:37.082098Z",
+     "shell.execute_reply.started": "2025-02-16T06:49:37.069580Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaled Similarity Scores:\n",
+      "tensor([[-0.0700,  0.0458, -0.4612],\n",
+      "        [-0.2844,  0.2883, -2.1230],\n",
+      "        [ 0.3424, -0.4725,  2.8610]], grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_sims = selfAttention(encodings_matrix, return_scaled_sims=True)\n",
+    "print(\"Scaled Similarity Scores:\")\n",
+    "print(scaled_sims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5a4689c-501f-4e4c-ba97-9ea7b7ad35dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
